--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,7 @@
                 <includes>
                     <include>bootstrap.yml</include>
                     <include>banner.txt</include>
+                    <include>git.properties</include>
                 </includes>
             </resource>
         </resources>
